[tool.poetry]
name = "onetrading"
version = "0.1.0"
description = ""
authors = ["Shawn Lin <xiaoliang.lin@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
databento = "^0.30.0"
sqlalchemy = "^2.0.27"
notebook = "^7.1.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
scipy = "^1.12.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
